--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <h1>Willkommen bei Bögeholz Media Ventures</h1>
-<a href="http://creatronix.de">Creatronix Tech Blog</a>
-<a href="http:/prestissimo-guitar.com">Prestissimo Guitar Music Blog</a>
+<a href="https://creatronix.de">Creatronix Tech Blog</a>
+<a href="https:/prestissimo-guitar.com">Prestissimo Guitar Music Blog</a>
 </body>
 </html>
