--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
 <body>
 <h1>Willkommen bei Bögeholz Media Ventures</h1>
 <a href="https://creatronix.de">Creatronix Tech Blog</a>
-<a href="https:/prestissimo-guitar.com">Prestissimo Guitar Music Blog</a>
+<a href="https://prestissimo-guitar.com">Prestissimo Guitar Music Blog</a>
 </body>
 </html>
