--- a/index.html
+++ b/index.html
@@ -5,8 +5,14 @@
     <title>Bögeholz Media Ventures</title>
 </head>
 <body>
-<h1>Willkommen bei Bögeholz Media Ventures</h1>
+<h1>Willkommen bei den Bögeholz Media Ventures</h1>
+<h2>Prestissimo Media Group</h2>
+Wir betreiben die Seiten:
 <a href="https://creatronix.de">Creatronix Tech Blog</a>
 <a href="https://prestissimo-guitar.com">Prestissimo Guitar Music Blog</a>
+<a href="https://www.youtube.com/@PrestissimoMedia">Youtube PrestissimoMedia </a>
+und kümmern uns um die Kanaäle / Seiten
+<a href="https://www.youtube.com/@lostinsalvation7890">Youtube Lost in Salvation </a>
+<a href="https://www.facebook.com/LostinSalvation/">Facebook Lost in Salvation </a>
 </body>
 </html>
