--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@ Wir betreiben die Seiten:
     <li><a href="https://creatronix.de">Creatronix Tech Blog</a></li>
     <li><a href="https://prestissimo-guitar.com">Prestissimo Guitar Music Blog</a></li>
     <li><a href="https://www.youtube.com/@PrestissimoMedia">Youtube PrestissimoMedia </a></li>
+    <li><a href="https://www.instagram.com/prestissimo_media/">Instagram PrestissimoMedia </a></li>
 </ul>
 
 und kümmern uns um die Kanäle / Seiten
